Jupyter con entreno
Pasos a seguir para entrenar el modelo

--- a/Modelo1.ipynb
+++ b/Modelo1.ipynb
@@ -288,45 +288,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x,y = data,labels\n",
+    "x_train,x_test,y_train,y_test = train_test_split(x,y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = Sequential([\n",
+    "    Dense(64, activation='relu', input_shape=(len(x_train.iloc[0]),)),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(1)]\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.compile(optimizer=tf.keras.optimizers.RMSprop(),\n",
+    "              loss=tf.keras.losses.MeanSquaredError(),\n",
+    "              metrics=['mae', 'mse'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 6661 samples, validate on 741 samples\n",
+      "Epoch 1/10\n",
+      "6661/6661 [==============================] - 2s 318us/sample - loss: 3.4772 - mae: 1.1769 - mse: 3.4772 - val_loss: 1.8911 - val_mae: 1.1219 - val_mse: 1.8911\n",
+      "Epoch 2/10\n",
+      "6661/6661 [==============================] - 1s 124us/sample - loss: 1.4309 - mae: 0.9334 - mse: 1.4309 - val_loss: 1.3176 - val_mae: 0.9102 - val_mse: 1.3176\n",
+      "Epoch 3/10\n",
+      "6661/6661 [==============================] - 1s 136us/sample - loss: 1.4196 - mae: 0.9307 - mse: 1.4196 - val_loss: 1.3215 - val_mae: 0.8961 - val_mse: 1.3215\n",
+      "Epoch 4/10\n",
+      "6661/6661 [==============================] - 1s 163us/sample - loss: 1.3621 - mae: 0.9114 - mse: 1.3621 - val_loss: 1.1537 - val_mae: 0.8366 - val_mse: 1.1537\n",
+      "Epoch 5/10\n",
+      "6661/6661 [==============================] - 1s 113us/sample - loss: 1.3470 - mae: 0.9048 - mse: 1.3470 - val_loss: 2.5951 - val_mae: 1.3664 - val_mse: 2.5951\n",
+      "Epoch 6/10\n",
+      "6661/6661 [==============================] - 1s 113us/sample - loss: 1.3224 - mae: 0.8970 - mse: 1.3224 - val_loss: 1.8552 - val_mae: 1.0811 - val_mse: 1.8552\n",
+      "Epoch 7/10\n",
+      "6661/6661 [==============================] - 1s 112us/sample - loss: 1.2999 - mae: 0.8850 - mse: 1.2999 - val_loss: 1.2774 - val_mae: 0.8959 - val_mse: 1.2774\n",
+      "Epoch 8/10\n",
+      "6661/6661 [==============================] - 1s 117us/sample - loss: 1.2980 - mae: 0.8824 - mse: 1.2980 - val_loss: 1.6536 - val_mae: 1.0444 - val_mse: 1.6536\n",
+      "Epoch 9/10\n",
+      "6661/6661 [==============================] - 1s 137us/sample - loss: 1.2808 - mae: 0.8825 - mse: 1.2808 - val_loss: 1.5438 - val_mae: 0.9705 - val_mse: 1.5438\n",
+      "Epoch 10/10\n",
+      "6661/6661 [==============================] - 1s 142us/sample - loss: 1.2615 - mae: 0.8719 - mse: 1.2615 - val_loss: 1.2275 - val_mae: 0.8795 - val_mse: 1.2275\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7f01e924f910>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=10, validation_split=0.1)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num_examples = 10\n",
+    "predictions = model.predict(x_test[:num_examples])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted val:  7.316289\n",
+      "Actual val:  5.37486994756\n",
+      "\n",
+      "Predicted val:  7.997316\n",
+      "Actual val:  10.00016820432\n",
+      "\n",
+      "Predicted val:  7.9241433\n",
+      "Actual val:  8.75014717878\n",
+      "\n",
+      "Predicted val:  7.352114\n",
+      "Actual val:  6.4374980503999994\n",
+      "\n",
+      "Predicted val:  8.0149355\n",
+      "Actual val:  9.25059651352\n",
+      "\n",
+      "Predicted val:  6.5404973\n",
+      "Actual val:  4.2218523173\n",
+      "\n",
+      "Predicted val:  7.790035\n",
+      "Actual val:  8.5208664263\n",
+      "\n",
+      "Predicted val:  8.385647\n",
+      "Actual val:  8.0248263368\n",
+      "\n",
+      "Predicted val:  7.316289\n",
+      "Actual val:  6.8122838958\n",
+      "\n",
+      "Predicted val:  8.000883\n",
+      "Actual val:  7.403122757959999\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(num_examples):\n",
+    "    print('Predicted val: ', predictions[i][0])\n",
+    "    print('Actual val: ',y_test.iloc[i])\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
